--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "@types/react-helmet": "^6.1.11",
     "clsx": "^2.1.1",
+    "react-custom-roulette": "^1.4.1",
     "react-helmet": "^6.1.0",
     "tailwind-merge": "^3.3.0"
   },
   "name": "client",
   "version": "1.0.0",
   "main": "tailwind.config.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
