--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "wouter": "^3.7.0",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "react-custom-roulette": "^1.4.1"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
