--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
     "clsx": "^2.1.1",
     "react-custom-roulette": "^1.4.1",
     "react-helmet": "^6.1.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "yet-another-react-lightbox": "^3.23.2"
   },
   "name": "client",
   "version": "1.0.0",
