--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "ws": "^8.18.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0",
-    "react-custom-roulette": "^1.4.1"
+    "react-custom-roulette": "^1.4.1",
+    "yet-another-react-lightbox": "^3.21.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
